Add bot command capability, player events, and CI build
- Bots can now execute server commands like /rtp through the normal
  command pipeline (/stress cmd, /stress chat /rtp, /botcmd).
- Bots are OP by default (toggle with /stress op) so permission-based
  commands work.
- Fake players now fire PlayerMoveEvent while moving and use Bukkit
  teleport so PlayerTeleportEvent/PlayerChangedWorldEvent fire.
- External teleports reset bot navigation so /rtp does not snap back.
- Add Gradle wrapper and a GitHub Actions workflow that builds and
  uploads the 1.21 and 1.21.11 jars.

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>